Make Dockerfile actually build the project, including dependencies